# Business-Analysis-Homework

./: .gitignore  README.md  export.py  export.sh  pyproject.toml  requirements.txt
exp/: exp1.ipynb  exp2.ipynb  exp3.ipynb
