[project]
name = "business-stat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "nbstripout>=0.9.1",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
]
